[gd_scene load_steps=7 format=3 uid="uid://c8oi2j2cbx6dh"]

[ext_resource type="Script" path="res://Scenes/Other/moving_platform.gd" id="1_doq06"]
[ext_resource type="Texture2D" uid="uid://cu44p0h8tflov" path="res://assets/textures/objects/moving_platform.png" id="1_na3ql"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ikoss"]
atlas = ExtResource("1_na3ql")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yqw8"]
atlas = ExtResource("1_na3ql")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_g7kxt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikoss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yqw8")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5cqj1"]
size = Vector2(61, 3)

[node name="MovingPlatform" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 36
script = ExtResource("1_doq06")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_g7kxt")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.159103

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0.5)
shape = SubResource("RectangleShape2D_5cqj1")
one_way_collision = true

[node name="RaycastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 29)
collision_mask = 36

[node name="RaycastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, -20)
collision_mask = 36

[node name="RaycastRight" type="RayCast2D" parent="."]
target_position = Vector2(43, 0)
collision_mask = 52

[node name="RaycastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-42, 0)
collision_mask = 52
